# another-commerce

./: README.md  docker-compose.yml  package.json  pyproject.toml
app/: .env.template  medusa-config.js  package.json  pnpm-lock.yaml
app/data/: seed.datasets.json  toseed.ts
app/sql/: SP_GET_TOP_SIMILAR_PRODUCTS.sql  SP_GET_TOP_SIMILAR_USER_PRODUCTS.sql
app/src/api/routes/store/: index.ts
app/src/loaders/: data-loaders.ts
app/src/migrations/: 1694686932724-ProductFeatures.ts  1694696247438-UserFeatures.ts  1694697720150-CategoryFeatures.ts  1694870177127-UpdatePreferenceAggregate.ts  1694875298278-UpdateProductAggregate.ts  1694875766434-CreateNewFeaturesRow.ts  1696935703512-CollectSimilarProduct.ts  1696935836790-CollectSimilarUser.ts  1697008785153-CreateProductNameEmbeddings.ts  1697013290525-UpdateSortRecommendationsProcedure.ts
app/src/models/: CustomerSimilarProduct.ts
app/src/services/: features.ts
app/src/subscribers/: FeatureCreationSubscriber.ts  ProductCreatedSubscriber.ts
app/src/types/: product-preview.ts
frontend/: pnpm-lock.yaml  svelte.config.js
frontend/src/routes/product/[slug]/: +page.svelte
next-storefront/: next.config.js  package.json  pnpm-lock.yaml
next-storefront/src/app/(main)/: page.tsx
next-storefront/src/modules/home/components/featured-products/: index.tsx
next-storefront/src/modules/home/components/list-products/: index.tsx
supabase/docker/: .gitignore  docker-compose.yml
supabase/docker/dev/: docker-compose.dev.yml
supabase/docker/volumes/api/: kong.yml
worker/transformer/: package.json  server.py
(+5 files in other folders)
